# SolanaWalletTracker

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml.sample  icon.png.drawio  recipe.json
.github/workflows/: docker-build.yml
files/: store.json  token-list.json
src/: bot_helper.rs  main.rs
src/commands/: address.rs  domain.rs  help.rs  mod.rs  ping.rs  solanabeach.rs  solscan.rs  step.rs  tokens.rs
src/solana/: mod.rs  token.rs  token_lookup.rs
src/solscan/: consolePrinter.rs  consoleprinter.rs  helper.rs  mod.rs  solscan.rs  struct.rs  toPrint.rs
src/solscan/structs/: market.rs  mod.rs  spl_transfer.rs  token.rs  transaction.rs
src/storage/: mod.rs  storage_helper.rs
src/storage/struct/: storage.rs
