[package]
name = "solanaWalletTracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11.11" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "1.0.137"